--- a/public/index.html
+++ b/public/index.html
@@ -130,7 +130,7 @@
         
             <!-- KANAN -->
             <div class="hero-right fade-in">
-                <img src="/img/kevin.png" alt="Kevin Azaria Profile" class="hero-image">
+                <img src="/img/hero/black.png" alt="Kevin Azaria Profile" class="hero-image">
             </div>
         </div>
 
